k8s/todos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: todos
