k8s/todos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/todos
            pathType: "Prefix"
            backend:
              service:
                name: todos-service
                port:
                  number: 80
